# kamui

./: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  PULL_REQUEST.md  README.md  devnet-layerzero-test.ts  simple_test.js  tsconfig.json  zk-compression-implementation.md
kamui-program/: .env.deployment  .gitignore  Anchor.toml  Cargo.toml  DEVNET_FIX_SUMMARY.md  KAMUI_VRF_FINAL_ANALYSIS.md  LAYERZERO_ANALYSIS_SESSION.md  LAYERZERO_DEVNET_IMPLEMENTATION_STATUS.md  LAYERZERO_DEVNET_SETUP.md  LAYERZERO_DEVNET_TEST_SESSION_COMPLETE.md  LAYERZERO_IMPLEMENTATION.md  LAYERZERO_IMPLEMENTATION_COMPLETE_DOCUMENTATION.md  LAYERZERO_IMPLEMENTATION_COMPLETE_PROGRESS.md  LAYERZERO_IMPLEMENTATION_COMPLETE_SESSION.md  LAYERZERO_IMPLEMENTATION_SUCCESS.md  README-LayerZero-VRF.md  README-compressed-accounts.md  README.md  SOLANA_VRF_OPTIMIZATION_GUIDE.md  UPGRADE_NOTES.md  VRF_TEST_RESULTS.md  compressed-vrf-devnet-test.ts  debug-account-data.ts  deploy-to-devnet.sh  devnet-test.sh  devnet-working-test.ts  direct-test.sh  direct-tests.ts  enhanced-vrf-server.ts  fixed-comprehensive-test.ts  fixed-error-test.ts  get-devnet-sol.sh  hardhat.config.ts  honest-devnet-test.ts  layerzero-vrf-integration.ts  layerzero.config.ts  lz-basic-test.ts  lz-devnet-integration-test.ts  lz-devnet-test-simple.ts  micro-vrf-test.ts  (+30 more)
kamui-program/.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
kamui-program/.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1747717865727150  LOG.old.1747735157105906  MANIFEST-000021
kamui-program/.cargo/: config.toml
kamui-program/app/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
kamui-program/app/app/: package-lock.json  package.json
kamui-program/app/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
kamui-program/app/src/components/: VRFDemo.tsx
kamui-program/archive/: anchor-vrf-integration.ts
kamui-program/contracts/: GameWithVRF.sol  VRFConsumerLZ.sol
kamui-program/docs/: INTEGRATION.md  LAYERZERO-VRF-INTEGRATION.md  UPGRADE_SUMMARY.md
kamui-program/examples/: layerzero-vrf-example.ts
kamui-program/keypairs/: deploy-keypair.json  program-keypair.json  transfer.json
kamui-program/programs/kamui-layerzero/: Cargo.toml
kamui-program/programs/kamui-layerzero/src/: constants.rs  errors.rs  lib.rs  msg_codec.rs  oapp.rs  state.rs
kamui-program/programs/kamui-layerzero/src/instructions/: fulfill_vrf.rs  init_store.rs  initialize_endpoint.rs  lz_receive.rs  mod.rs  process_vrf_request.rs  quote_send.rs  receive_message.rs  receive_vrf_fulfillment.rs  register_oapp.rs  request_vrf.rs  send_message.rs  (+3 more)
kamui-program/programs/kamui-layerzero/tests/: vrf_message_processing_test.js
kamui-program/programs/kamui-vrf/: Cargo.toml  README.md
kamui-program/programs/kamui-vrf-consumer/: Cargo.toml
kamui-program/programs/kamui-vrf-consumer/src/: lib.rs
kamui-program/programs/kamui-vrf/src/: compressed_vrf.rs  errors.rs  lib.rs  light_compressed_vrf.rs  state.rs
kamui-program/scripts/: create_test_keypair.sh  deploy-layerzero-vrf.sh  deploy-lz-vrf.js  deploy_vrf_program.sh  init-layerzero.ts  package-lock.json  package.json  recover_sol.ts  run_devnet_integration_test.sh  run_full_integration_test.sh  run_test_standalone.sh  run_vrf_devnet_test.sh  run_vrf_server.sh  run_vrf_server_standalone.sh  run_vrf_test.sh
kamui-program/src/: error.rs  event.rs  example_consumer.rs  instruction.rs  lib.rs  mock_prover.rs  processor.rs  state.rs  vrf_server.rs
kamui-program/src/client/: layerzero-vrf-client.ts
kamui-program/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
kamui-program/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1747717101163352  MANIFEST-000021
kamui-program/tests/: DEVNET_TESTS.md  README.md  anchor-vrf-integration.ts  comprehensive-devnet-test.ts  compressed-account-test.js  compressed_vrf_test.rs  consumer-integration-test.ts  devnet-vrf-test.ts  devnet_test.rs  enhanced_devnet_test.rs  enhanced_vrf_local_test.rs  generate_real_vrf_proof.rs  layerzero-vrf-integration.ts  lz-devnet-test.ts  minimal-vrf-test.ts  optimized-vrf-test.ts  oracle-test.ts  request-pool-test.ts  simple-test.ts  simple_devnet_test.rs  subscription-test.ts  switchboard-vrf-test.ts  vrf-compressed-account-integration.js  vrf-compressed-account-integration.ts  vrf-consumer-test.ts  vrf-fulfillment-test.ts  vrf-request-test.ts  vrf_devnet_test.rs
kamui-program/tests/anchor/: Anchor.toml  kamui_layerzero.json  package-lock.json  package.json  test-keypair.json  tsconfig.json
kamui-program/tests/anchor/tests/: enhanced-devnet-vrf-test.ts  enhanced-vrf-test.ts  fixed-kamui-vrf-test.ts  fresh-kamui-vrf-test.ts  lz-basic-test.ts  lz-integration-test.ts  optimized-kamui-vrf-test.ts  properly-fixed-kamui-vrf-test.ts  real-kamui-vrf-test.ts  real-layerzero-vrf-integration-test.ts  working-vrf-verification-test.ts
vrf-server/: .gitignore  Cargo.toml  README.md  keypair.json  oracle-keypair.json  package-lock.json  package.json  regenerate_keypairs.sh  regenerate_keypairs_backup.sh  run_fixed.sh  run_integration_test.sh  run_simulated_test.sh  run_standalone_test.sh  run_vrf.sh  run_vrf_server.sh  run_vrf_server_polling.sh  run_vrf_server_websocket.sh  run_vrf_server_with_events.sh  run_vrf_simple.sh  run_vrf_simple_ws.sh  run_vrf_test.sh  stop_vrf_server.sh  test-tx.js  test.sh  vrf-keypair.json  vrf-server-nodejs.js  vrf-server-nodejs.js.bak  vrf-server-simple-ws.js  vrf-server-websocket.js
vrf-server/keypairs/: game_owner.json  payer.json  subscription_account.json  subscription_owner.json
vrf-server/nodejs/: README.md  package-lock.json  package.json  run-node-vrf-server.sh  vrf-server-nodejs.js
vrf-server/simulated_test/: simulate_vrf_flow.sh
vrf-server/src/: lib.rs  main.rs  vrf_server.rs
vrf-server/temp/: gen.rs
(+58 files in other folders)
