[package]
name = "kamui-program"
version = "0.1.0"
edition = "2021"

[lib]
name = "kamui_program"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []
mock = ["rand", "solana-sdk", "solana-client", "solana-program-test", "hex", "serde_json", "tokio", "clap", "futures-util", "env_logger"]

[dependencies]
solana-program = { workspace = true }
borsh = "1.2.1"
borsh-derive = "1.2.1"
thiserror = "1.0"
anchor-spl = { workspace = true }
sha2 = "0.10"
base64 = "0.21"
rand = { version = "0.8", optional = true }
solana-sdk = { workspace = true, optional = true }
solana-client = { workspace = true, optional = true }
solana-program-test = { workspace = true, optional = true }
hex = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
clap = { version = "4.2.1", features = ["derive"], optional = true }
futures-util = { version = "0.3", optional = true }
env_logger = { version = "0.10", optional = true }
bincode = "1.3"
futures = "0.3.31"

[dev-dependencies]
solana-client = { workspace = true }
solana-zk-token-sdk = { workspace = true }
anyhow = "1.0"
solana-sdk = { workspace = true }
solana-program-test = { workspace = true }
tokio = { version = "1.0", features = ["full", "test-util"] }
rand = "0.8"
serde_json = "1.0"
hex = "0.4"

[workspace]
members = [
    "programs/kamui-vrf",
    "programs/kamui-vrf-consumer",
    "programs/kamui-layerzero",
]
resolver = "2"

[workspace.dependencies]
solana-program = "=2.1.0"
solana-zk-token-sdk = "=2.1.0"
solana-sdk = "=2.1.0"
solana-program-test = "=2.1.0"
solana-client = "=2.1.0"
anchor-lang = "=0.31.0"
anchor-spl = "=0.31.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"
overflow-checks = true

[profile.test]
overflow-checks = true

[patch.crates-io]
proc-macro2 = { git = "https://github.com/dtolnay/proc-macro2", tag = "1.0.60" }
