[package]
name = "kamui-program"
version = "0.1.0"
edition = "2021"

[lib]
name = "kamui_program"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []
mock = ["mangekyou", "rand", "solana-sdk", "solana-client", "solana-program-test", "hex", "serde_json", "tokio", "clap", "futures-util", "env_logger"]

[dependencies]
solana-program = { workspace = true }
borsh = "0.10"
thiserror = "1.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }
sha2 = "0.10"
base64 = "0.21"
mangekyou = { path = "../mangekyou", optional = true }
rand = { version = "0.8", optional = true }
solana-sdk = { workspace = true, optional = true }
solana-client = { workspace = true, optional = true }
solana-program-test = { workspace = true, optional = true }
hex = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
clap = { version = "4.2.1", features = ["derive"], optional = true }
futures-util = { version = "0.3", optional = true }
env_logger = { version = "0.10", optional = true }
bincode = "1.3"
futures = "0.3.31"

[dev-dependencies]
solana-client = { workspace = true }
solana-zk-token-sdk = { workspace = true }
anyhow = "1.0"
solana-sdk = { workspace = true }
solana-program-test = { workspace = true }
tokio = { version = "1.0", features = ["full", "test-util"] }
rand = "0.8"
serde_json = "1.0"
mangekyou = { path = "../mangekyou" }
hex = "0.4"
anchor-lang = { workspace = true }
borsh = "0.10"

[[bin]]
name = "mock-prover"
path = "src/bin/mock_prover.rs"
required-features = ["mock"]

[[bin]]
name = "vrf-server"
path = "src/bin/vrf_server.rs"
required-features = ["mock"]

[[bin]]
name = "transfer-sol"
path = "src/bin/transfer_sol.rs"
required-features = ["mock"]

[[bin]]
name = "real-vrf-server"
path = "src/bin/real_vrf_server.rs"
required-features = ["mock"]

[[bin]]
name = "generate-real-vrf-proof"
path = "tests/generate_real_vrf_proof.rs"
required-features = ["mock"]

[workspace]
members = [
    "programs/kamui-vrf",
    "programs/kamui-vrf-consumer",
]
resolver = "2"

[workspace.dependencies]
solana-program = "=1.17.2"
solana-zk-token-sdk = "=1.17.2"
solana-sdk = "=1.17.2"
solana-program-test = "=1.17.2"
solana-client = "=1.17.2"
anchor-lang = "=0.31.1"
anchor-spl = "=0.31.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"
overflow-checks = true

[profile.test]
overflow-checks = true
