[package]
name = "kamui-layerzero"
version = "0.1.0"
description = "LayerZero integration for Kamui VRF"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kamui_layerzero"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
bytemuck = { version = "1.14.0", features = ["derive", "min_const_generics"] }
borsh = "0.10.3"
kamui-vrf = { path = "../kamui-vrf", features = ["cpi"] } 